--- a/clicky-game/src/components/CartoonCard/CartoonCard.css
+++ b/clicky-game/src/components/CartoonCard/CartoonCard.css
@@ -1,7 +1,7 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  height: 195px;
   margin: 1rem;
   position: relative;
   width: 325px;
@@ -10,15 +10,17 @@
 }
 
 .card > .img-container {
-  height: 60%;
+  height: 95%;
   overflow: hidden;
   text-align: center;
   background:#6CADDC;
+  margin: 5px;
 }
 .card > .img-container > img {
   width: 60%
 }
 
+/*
 .card > .content {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -45,3 +47,4 @@
 .card > .remove:hover {
   color: #d50000;
 }
+*/
