--- a/clicky-game/src/App.css
+++ b/clicky-game/src/App.css
@@ -3,3 +3,11 @@
   text-align: center;
   margin-bottom: 50px;
 }
+
+h1 {
+  
+  text-align: center;
+  padding-left: 300px;
+  padding-right: 300px;
+  
+}
